tests/macros/multi_select/editor.rs
fn main() {
    let q = requestty::questions![MultiSelect { editor: todo!() }];
}
